2.1 (2011-06-29)
  * newlines in quoted values are allowed
  * commented header is supported by option

2.0 (2011-04-18)
  * based on Diergo Utils 1.5
  * mapping and unmapping iterators are replaced by tranformers
  * parser skips comment lines starting with #

1.2 (2010-09-01)
  * splitted CSV generator and parser
  * new ReflectionProxyTransformer

1.1 (2008-09-10)
  * separator may be determined automatically
  * some methods of CommaSeparatedValues became depreciated
  * line parsing moved to utility class
  * new abstract line based array reader and writer

1.0 (2008-05-14)

1.0 (2008-05-07 beta)
  * string array comparator moved to diergo.csv
  * array package content is generic only now,
    string array cutter, comparator and mapped iterator have been renamed
  * new command interface, main introduced: sort, cut, filter

0.4 (2008-04-09 alpha)

  * new package structure
  * more generic interfaces
  * interface array writer
  * cutting reader and writer
  * csv reader implements iterable
  * mock implementations for testing

0.3 (2008-03-19 alpha)
  * initial release